# hackeeg-client-python

./: .gitignore  LICENSE  Pipfile  README.md  __init__-LAPTOP-5A842SNO.py  example.py  setup.py
data/: 2023-09-28_00-38-37_data.csv  2023-09-28_00-42-04_data.csv  2023-09-28_00-53-38_data.parquet  2023-09-28_01-00-28_data.parquet  2023-09-28_01-06-47_data.csv  2023-09-28_01-06-47_data.parquet  2023-09-28_01-13-44_data.csv  2023-09-28_01-13-44_data.parquet  2023-09-28_01-43-49_data.parquet  2023-10-05_13-11-07_data.parquet  2023-10-05_16-20-26_data.csv  2023-10-05_16-20-26_data.parquet  2023-10-05_16-57-37_data.parquet  2023-10-05_20-54-18_data.csv  2023-10-05_20-54-18_data.parquet  2023-10-05_22-32-12_data.csv  2023-10-05_22-32-12_data.parquet  2023-10-05_22-40-15_data.csv  2023-10-05_22-55-30_data.csv  2023-10-05_22-55-30_data.parquet  2023-10-05_22-58-27_data.parquet  2023-10-05_22-59-20_data.parquet  2023-10-05_23-09-30_data.parquet  2023-10-05_23-10-04_data.csv  2023-10-05_23-12-13_data.csv  2023-10-10_15-54-11_data.csv  2023-10-10_15-54-11_data.parquet  2023-10-12_13-59-19_data.csv  2023-10-12_13-59-19_data.parquet  2023-10-12_14-04-53_data.parquet  2023-10-12_14-30-01_data.parquet  2023-10-12_14-33-57_data.parquet  2023-10-12_14-34-17_data.parquet  2023-10-12_14-37-08_data.parquet  2023-10-12_14-52-02_data.csv  2023-10-12_14-52-02_data.parquet  2023-10-12_14-53-07_data.csv  2023-10-12_14-53-07_data.parquet
docs/: conf.py  index.rst  substitutions.rst
docs/_static/: style.css
docs/user/: install.rst  intro.rst  local-streaming.rst  openbci.rst  python-api.rst  quickstart.rst  wifi-streaming.rst
hackeeg/: CMakeLists.txt  ReadLine.py  SerialToSocket.py  __init__.py  acquire_data.cpp  acquire_data_module.cpp  ads1299.py  analysis.py  buffer.py  driver-LAPTOP-5A842SNO-2.py  driver-LAPTOP-5A842SNO.py  driver.cpp  driver.py  driver_exp.py  matlab_bandpass.py  multi_melt.py  signal_processing.py  test_acquire_data.py  test_driver.py
notebooks/: 2023-10-19_data_tests.ipynb
util/: upload-to-pypi.sh
