cmake_minimum_required(VERSION 3.12)
project(acquire_data_module)

set(CMAKE_CXX_STANDARD 14)

# include(/path/to/vcpkg/scripts/buildsystems/vcpkg.cmake)
SET(VCPKG_ROOT "C:/src/vcpkg")
SET(_VCPKG_INSTALLED_DIR "C:/src/vcpkg/installed")
SET(VCPKG_TARGET_TRIPLET "x64-windows" CACHE STRING "")
# SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "C:/src/vcpkg/packages")
# SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include")
SET(INTERFACE_INCLUDE_DIRECTORIES "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include")
# SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "C:/src/vcpkg/packages")
set(CMAKE_LIBRARY_PATH ${CMAKE_INCLUDE_PATH}  "C:/Users/leofo/anaconda3/envs/hackeeg2/libs")
set(CMAKE_INCLUDE_PATH ${CMAKE_LIBRARY_PATH}  "C:/Users/leofo/anaconda3/envs/hackeeg2/include")
# set(CMAKE_INCLUDE_PATH ${CMAKE_LIBRARY_PATH}  "C:/src/vcpkg/packages/msgpack_x64-windows/")
# set(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH}  "C:/src/vcpkg/packages/msgpack_x64-windows/include")
# set(CMAKE_INCLUDE_PATH ${CMAKE_MODULE_PATH}  "C:/src/vcpkg/packages/pybind11_x64-windows/share/pybind11")
# find_package(Boost)
set(Python3_INCLUDE_DIRS "C:/Users/leofo/anaconda3/envs/hackeeg2")
find_package(Python3 REQUIRED COMPONENTS Interpreter Development)


# # add_library(msgpack msgpack.hpp msgpack.cpp)
# # find_library(msgpack REQUIRED "C:/src/vcpkg/packages/msgpack_x64-windows/include")
# find_library(msgpack REQUIRED "C:/src/vcpkg/packages/msgpack_x64-windows/include/msgpack.hpp")
# # add_library(msgpack "C:/src/vcpkg/packages/msgpack_x64-windows/include/msgpack.hpp")
# # find_package(msgpack "C:/src/vcpkg/packages/msgpack_x64-windows/include")
# # add_library(msgpack)
# add_library(msgpack REQUIRED)
# # find_package(msgpack REQUIRED)

# set(Boost_INCLUDE_DIR "C:/src/vcpkg/packages/")
# set(BOOST_ROOT "C:/src/vcpkg/packages")
set(Boost_INCLUDE_DIR "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include")
# set(msgpack_DIR "C:/src/vcpkg/packages/msgpack_x64-windows/share/msgpack")
set(msgpack_DIR "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include")
# find_package(msgpack REQUIRED)
include_directories("${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include/")
set(msgpack_DIR "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include/msgpack")
find_library(msgpack "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include/" "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include/msgpack")
add_library(msgpack "C:/src/vcpkg/installed/x64-windows/include/msgpack.hpp")
set_target_properties(msgpack PROPERTIES LINKER_LANGUAGE CXX)

set(pybind11_DIR "C:/src/vcpkg/packages/pybind11_x64-windows/share/pybind11")
find_package(pybind11 REQUIRED)

# add_subdirectory(pybind11)
# pybind11_add_module(acquire_data_module pybind_wrapper.cpp)
pybind11_add_module(acquire_data_module acquire_data_module.cpp)